--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,10 +35,25 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            minifyEnabled = true
         }
     }
+   
 }
 
 flutter {
     source = "../.."
+}
+
+
+ dependencies {
+    // Your other dependencies
+
+    // Add the necessary BouncyCastle libraries
+    implementation("org.bouncycastle:bcpkix-jdk15on:1.70")
+    implementation("org.bouncycastle:bcprov-jdk15on:1.70")
+    implementation("org.bouncycastle:bctls-jdk15on:1.70")
+
+    // Add OkHttp if necessary
+    implementation("com.squareup.okhttp3:okhttp:4.9.3")
 }
